--- a/index.html
+++ b/index.html
@@ -3,66 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InteracTik - Tienda</title>
+    <title>InteracTik - Impulsa tu Marca</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Banner principal -->
-    <header class="banner">
-        <h1>InteracTik</h1>
-        <p>Impulsa tu cuenta, marca o negocio en TikTok</p>
+
+    <!-- NAVBAR -->
+    <header class="navbar">
+        <div class="logo">InteracTik</div>
+        <nav>
+            <a href="#inicio">Inicio</a>
+            <a href="#mision">Misión</a>
+            <a href="#vision">Visión</a>
+            <a href="#equipo">Equipo</a>
+            <a href="#reseñas">Reseñas</a>
+            <a href="contact.html" class="btn-contacto">Contacto</a>
+        </nav>
     </header>
 
-    <!-- Misión y visión -->
-    <section class="mision-vision">
-        <h2>Misión</h2>
-        <p>Nuestra misión es ayudarte a crecer en TikTok y redes sociales con estrategias efectivas.</p>
-
-        <h2>Visión</h2>
-        <p>Ser la plataforma número uno en impulsar creadores y negocios en América Latina.</p>
-    </section>
-
-    <!-- Galería de imágenes y videos -->
-    <section class="galeria">
-        <h2>Promociones y Publicidad</h2>
-        <div class="grid">
-            <img src="img/banner1.jpg" alt="Promoción 1">
-            <img src="img/banner2.jpg" alt="Promoción 2">
-            <video src="videos/demo.mp4" controls></video>
-            <img src="img/banner3.jpg" alt="Promoción 3">
+    <!-- HERO SECTION -->
+    <section id="inicio" class="hero">
+        <div class="hero-text">
+            <h1>Impulsa tu cuenta, marca o negocio</h1>
+            <p>Servicios oficiales de TikTok LIVE, crecimiento de seguidores y campañas publicitarias.</p>
+            <button class="btn-cta">Comienza Ahora</button>
         </div>
     </section>
 
-    <!-- Sesión de bonos y descuentos -->
-    <section class="bonos">
-        <h2>Bonos y Descuentos</h2>
-        <p>¡Aprovecha hasta un 25% de descuento en servicios oficiales de TikTok!</p>
+    <!-- MISIÓN -->
+    <section id="mision" class="section">
+        <h2>Nuestra Misión</h2>
+        <p>Ayudar a creadores y negocios a crecer en TikTok mediante estrategias innovadoras y servicios accesibles.</p>
     </section>
 
-    <!-- Actividad oficial en vivo -->
-    <section class="actividad-live">
-        <h2>Actividad Oficial</h2>
-        <p>Síguenos en nuestros lives de TikTok para ganar cupones exclusivos.</p>
+    <!-- VISIÓN -->
+    <section id="vision" class="section alt">
+        <h2>Nuestra Visión</h2>
+        <p>Ser la agencia líder en crecimiento digital, conectando marcas con audiencias en tiempo real.</p>
     </section>
 
-    <!-- Reseñas -->
-    <section class="reseñas">
-        <h2>Reseñas</h2>
-        <blockquote>“Gracias a InteracTik mi cuenta creció un 200% en un mes.” – Cliente feliz</blockquote>
-        <blockquote>“El mejor servicio para crecer en redes.” – Usuario satisfecho</blockquote>
+    <!-- EQUIPO -->
+    <section id="equipo" class="section">
+        <h2>Conoce a Nuestro Equipo</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="images/team1.jpg" alt="Miembro 1">
+                <h3>Laura</h3>
+                <p>Especialista en Marketing</p>
+            </div>
+            <div class="card">
+                <img src="images/team2.jpg" alt="Miembro 2">
+                <h3>Carlos</h3>
+                <p>Experto en TikTok Ads</p>
+            </div>
+            <div class="card">
+                <img src="images/team3.jpg" alt="Miembro 3">
+                <h3>Sofía</h3>
+                <p>Diseñadora de Contenido</p>
+            </div>
+        </div>
     </section>
 
-    <!-- Botón de WhatsApp -->
-    <a href="https://wa.me/3213290999?text=Estoy%20interesado%20en%20los%20detalles%20románticos,%20quisiera%20más%20información" class="btn-whatsapp" target="_blank">📲 Escríbenos por WhatsApp</a>
+    <!-- RESEÑAS -->
+    <section id="reseñas" class="section alt">
+        <h2>Lo Que Dicen Nuestros Clientes</h2>
+        <div class="reviews">
+            <blockquote>"Duplicamos nuestras ventas en menos de un mes. InteracTik es la mejor opción." - Andrea M.</blockquote>
+            <blockquote>"Excelente soporte y resultados medibles en cada campaña." - Juan P.</blockquote>
+        </div>
+    </section>
 
-    <!-- Footer con redes sociales -->
+    <!-- FOOTER -->
     <footer>
-        <p>Síguenos en redes sociales</p>
-        <div class="social-links">
+        <p>© 2025 InteracTik - Todos los derechos reservados.</p>
+        <div class="social">
             <a href="#">TikTok</a>
             <a href="#">Instagram</a>
             <a href="#">Facebook</a>
         </div>
     </footer>
+
+    <!-- BOTÓN WHATSAPP -->
+    <a href="https://wa.me/573213290999?text=¡Hola!%20Quiero%20más%20información%20sobre%20los%20servicios%20de%20InteracTik" class="whatsapp-float">💬</a>
+
+    <script src="app.js"></script>
 </body>
 </html>
+
