--- a/contact.html
+++ b/contact.html
@@ -1,38 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Contacto — Interactik</title>
-<style>
-body{font-family:Inter,system-ui,Arial;background:#08101a;color:#fff;margin:0}
-.wrap{max-width:760px;margin:40px auto;padding:20px}
-.card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(0,0,0,0.04));padding:20px;border-radius:12px}
-label{display:block;margin-top:12px;color:#cbd5e1}
-input,textarea{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:#fff;margin-top:6px}
-button{background:#ff4d6d;color:#111;padding:10px 14px;border-radius:10px;border:none;margin-top:12px;cursor:pointer}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto - InteracTik</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="wrap">
-<h1>Contacto</h1>
-<div class="card">
-<p>Escríbenos para preguntas, soporte o pedidos personalizados. También puedes usar WhatsApp para respuesta más rápida.</p>
-<form action="#" method="post">
-<label>Nombre</label>
-<input type="text" name="name" placeholder="Tu nombre" />
-<label>Correo</label>
-<input type="email" name="email" placeholder="tu@correo.com" />
-<label>Asunto</label>
-<input type="text" name="subject" placeholder="Por ejemplo: Paquete vistas" />
-<label>Mensaje</label>
-<textarea name="message" rows="6" placeholder="Escribe tu mensaje..."></textarea>
-<button type="submit">Enviar mensaje</button>
-</form>
 
+    <!-- NAVBAR -->
+    <header class="navbar">
+        <div class="logo">InteracTik</div>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="index.html#mision">Misión</a>
+            <a href="index.html#vision">Visión</a>
+            <a href="index.html#equipo">Equipo</a>
+            <a href="index.html#reseñas">Reseñas</a>
+        </nav>
+    </header>
 
-<p style="color:#94a3b8;margin-top:12px">O chatea por WhatsApp: <a href="https://wa.me/57WHATSAPP_NUMBER" style="color:#fff">WhatsApp</a></p>
-</div>
-</div>
+    <!-- CONTACTO -->
+    <section class="section">
+        <h1>Contacto</h1>
+        <p>Déjanos un mensaje y nos pondremos en contacto contigo lo antes posible.</p>
+
+        <form action="https://formspree.io/f/tu_id_de_formulario" method="POST" class="contact-form">
+            <div class="form-group">
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre" id="nombre" required placeholder="Tu nombre">
+            </div>
+            <div class="form-group">
+                <label for="email">Correo</label>
+                <input type="email" name="email" id="email" required placeholder="tu@email.com">
+            </div>
+            <div class="form-group">
+                <label for="mensaje">Mensaje</label>
+                <textarea name="mensaje" id="mensaje" rows="4" required placeholder="Escribe tu mensaje"></textarea>
+            </div>
+            <button type="submit" class="btn-cta">Enviar</button>
+        </form>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <p>© 2025 InteracTik - Todos los derechos reservados.</p>
+        <div class="social">
+            <a href="#">TikTok</a>
+            <a href="#">Instagram</a>
+            <a href="#">Facebook</a>
+        </div>
+    </footer>
+
+    <!-- BOTÓN WHATSAPP -->
+    <a href="https://wa.me/573213290999?text=¡Hola!%20Quiero%20más%20información%20sobre%20los%20servicios%20de%20InteracTik" class="whatsapp-float">💬</a>
+
 </body>
+</html>
+
 </html>
